logs/yatank-online.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/TornadIO2-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyjade'...
Listing './lib/python3.5/site-packages/pyjade/ext'...
Listing './lib/python3.5/site-packages/pyjade/ext/django'...
Listing './lib/python3.5/site-packages/pyjade/ext/pyramid'...
Listing './lib/python3.5/site-packages/pyjade/ext/tornado'...
Listing './lib/python3.5/site-packages/pyjade-4.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tornadio2'...
Compiling './lib/python3.5/site-packages/tornadio2/flashserver.py'...
***   File "./lib/python3.5/site-packages/tornadio2/flashserver.py", line 67
    except socket.error, ex:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornadio2/persistent.py'...
***   File "./lib/python3.5/site-packages/tornadio2/persistent.py", line 144
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornadio2/server.py'...
***   File "./lib/python3.5/site-packages/tornadio2/server.py", line 99
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornadio2/session.py'...
***   File "./lib/python3.5/site-packages/tornadio2/session.py", line 429
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/yatank_OnlineReport'...
Compiling './lib/python3.5/site-packages/yatank_OnlineReport/plugin.py'...
***   File "./lib/python3.5/site-packages/yatank_OnlineReport/plugin.py", line 57
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yatank_OnlineReport/server.py'...
***   File "./lib/python3.5/site-packages/yatank_OnlineReport/server.py", line 21
    print 'Client connected'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yatank_OnlineReport/static'...
Listing './lib/python3.5/site-packages/yatank_OnlineReport/static/css'...
Listing './lib/python3.5/site-packages/yatank_OnlineReport/static/fonts'...
Listing './lib/python3.5/site-packages/yatank_OnlineReport/static/js'...
Listing './lib/python3.5/site-packages/yatank_OnlineReport/static/js/vendor'...
Listing './lib/python3.5/site-packages/yatank_OnlineReport/templates'...
Listing './lib/python3.5/site-packages/yatank_online-0.0.9.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
